# gc-dojo

./: CMakeLists.txt  README.md  buildAndTest.sh  graph.cpp
src/: CMakeLists.txt  markandreallocate.cpp  markandreallocate.h  markandsweep.cpp  markandsweep.h
test/: CMakeLists.txt  markAndReallocateTest.cpp  markAndSweepTest.cpp
